--- a/src/components/SearchHistoryList/SearchHistoryList.module.scss
+++ b/src/components/SearchHistoryList/SearchHistoryList.module.scss
@@ -34,12 +34,17 @@
         grid-template-columns: repeat(2, 1fr);
     }
     li {
+        display: flex;
+        flex-direction: center;
+        align-items: center;
         text-align: center;
         padding: vmax(10);
         border-radius: vmax(5);
         @include _1440{ padding: vmax(17);}
         @include _1024{ padding: vmax(15);}
         a {
+            width: 100%;
+            height: 100%;
             font-size: vmax(24);
             @include _1440{ font-size: 1.4em;}
             // @include _1280{ font-size: 1.2em;}
