--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0.0);
 }
 
 .menuContent {
@@ -57,7 +58,6 @@
 
 @keyframes sideMenu {
     from {
-
         right: -41%;
         @include _886 { right: -51%}
         @include _600 { right: -71%}
