--- a/src/pages/AuthForm/AuthForm.module.scss
+++ b/src/pages/AuthForm/AuthForm.module.scss
@@ -56,6 +56,7 @@
     }
     @include _480 {
         width: 98%;
+        height: 600px;
     }
     @include _350 { width: 100%;}
         &_txt, &_txt_dark{
@@ -90,8 +91,8 @@
             @include _979 {width: 33em; height: vmax(54);}
             @include _768 {width: 40em; height: vmax(60);}
             @include _600 {width: 48em; height: vmax(70);}
-            @include _480 {width: 38em;}
-            @include _350 { height: vmax(80); }
+            @include _480 {width: 90vmin; height: 13vmin; font-size: 24px;}
+            // @include _350 { height: vmax(80); }
         }
         &_input_dark {
             background-color:#08121b;;
@@ -119,8 +120,10 @@
     border: vmax(1) solid black;
     border-radius: vmax(5);
     color: white;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     @include _1280 { font-size: 1.2em;}
     @include _600 { font-size: 1.4em;}
+    @include _480 { font-size: 30px;}
 }
 
 .authForm_submitAuthButton {
