--- a/src/components/SearchBlock/OffersList/OffersList.module.scss
+++ b/src/components/SearchBlock/OffersList/OffersList.module.scss
@@ -29,7 +29,8 @@
     @include _1280 { width: vmax(1085)}
     @include _1024 { width: vmax(1185)}
     @include _600 { width: vmax(950)}
-    @include _480 {width: vmax(680)}
+    @include _480 {width: 87vw}
+    @include _350 {width: 90vw}
     &_loading,
     &_nothing, 
     &_error {
@@ -39,6 +40,12 @@
         border-top: none;
         width: vmax(883);
         padding: vmax(10);
+        @include _1440 { width: vmax(890);};
+        @include _1280 { width: vmax(1085)}
+        @include _1024 { width: vmax(1185)}
+        @include _600 { width: vmax(950); font-size: 20px; padding: 15px;}
+        @include _480 {width: 87vw; font-size: 20px; padding: 10px;}
+        @include _350 {width: 90vw}
     }
 }
 
